# hyperplan

./: CMakeLists.txt  Dockerfile  LICENSE  README.md  analysis.py  hyperplan.rosinstall  local_cluster.py  mphpo.rosinstall  package.xml  requirements.txt  setup.py
examples/: Home.cfg  Maze_kcar.cfg  convergence.sh  cubicles.cfg  narrow_passage_dcar.cfg  narrow_passage_kcar.cfg  panda_benchmark.yaml  robowflex-docker.sh  robowflex.sh  robowflex_speed.sh  robowflex_test.sh  speed.sh  speed_kinodynamic.sh
examples/fetch/: box_pick-convergence.yaml  box_pick-speed.yaml  box_pick-speed_kinodynamic.yaml  box_small_table-convergence.yaml  box_small_table-speed.yaml  box_small_table-speed_kinodynamic.yaml  ompl_planning.yaml  readme.txt  request0001.yaml  request0002.yaml  request0003.yaml  request0004.yaml  request0005.yaml  request0006.yaml  request0007.yaml  request0008.yaml  request0009.yaml  request0010.yaml  small_pick-convergence.yaml  small_pick-speed.yaml  small_pick-speed_kinodynamic.yaml  table_under_pick-convergence.yaml  table_under_pick-speed.yaml  table_under_pick-speed_kinodynamic.yaml  tall_pick-convergence.yaml  tall_pick-speed.yaml  tall_pick-speed_kinodynamic.yaml  tall_place-convergence.yaml  tall_place-speed.yaml  tall_place-speed_kinodynamic.yaml  thin_vert_pick-convergence.yaml  thin_vert_pick-speed.yaml  thin_vert_pick-speed_kinodynamic.yaml  thin_vert_place-convergence.yaml  thin_vert_place-speed.yaml  thin_vert_place-speed_kinodynamic.yaml
examples/fetch/box_pick/: config.yaml  ompl_planning.yaml  path0001.yaml  path0003.yaml  path0009.yaml  path0010.yaml  path0011.yaml  path0012.yaml  path0014.yaml  path0016.yaml  path0017.yaml  path0018.yaml  path0019.yaml  request0001.yaml  request0002.yaml  request0003.yaml  request0005.yaml  request0010.yaml  request0011.yaml  request0015.yaml  request0016.yaml  request0020.yaml  scene0001.yaml  scene0002.yaml  scene0003.yaml  scene0006.yaml  scene0007.yaml  scene0008.yaml  scene0009.yaml  scene0010.yaml  scene0014.yaml  scene0018.yaml  scene0020.yaml  scene_sensed0001.yaml  scene_sensed0002.yaml  scene_sensed0003.yaml  scene_sensed0004.yaml  scene_sensed0005.yaml  scene_sensed0006.yaml  scene_sensed0007.yaml  (+13 more)
examples/fetch/octomap/: request0003.yaml  request0004.yaml  request0006.yaml  request0011.yaml  request0015.yaml  scene0006.yaml  scene0013.yaml  scene0018.yaml  scene0019.yaml  scene0020.yaml
examples/fetch/small_pick/: path0001.yaml  path0003.yaml  path0005.yaml  path0009.yaml  path0010.yaml  path0011.yaml  path0013.yaml  path0014.yaml  path0016.yaml  request0001.yaml  request0002.yaml  request0003.yaml  request0006.yaml  request0007.yaml  request0008.yaml  request0009.yaml  request0011.yaml  request0015.yaml  request0017.yaml  request0018.yaml  request0019.yaml  request0020.yaml  scene0001.yaml  scene0002.yaml  scene0003.yaml  scene0004.yaml  scene0005.yaml  scene0006.yaml  scene0007.yaml  scene0008.yaml  scene0009.yaml  scene0015.yaml  scene0017.yaml  scene_sensed0001.yaml  scene_sensed0002.yaml  scene_sensed0003.yaml  scene_sensed0004.yaml  scene_sensed0005.yaml  scene_sensed0006.yaml  scene_sensed0007.yaml  (+13 more)
examples/fetch/table_under_pick/: path0004.yaml  path0006.yaml  path0009.yaml  path0010.yaml  path0012.yaml  path0013.yaml  path0017.yaml  path0018.yaml  path0020.yaml  request0001.yaml  request0002.yaml  request0003.yaml  request0004.yaml  request0006.yaml  request0008.yaml  request0011.yaml  request0012.yaml  request0013.yaml  request0015.yaml  request0016.yaml  request0017.yaml  request0019.yaml  scene0001.yaml  scene0002.yaml  scene0003.yaml  scene0006.yaml  scene0007.yaml  scene0011.yaml  scene0012.yaml  scene0014.yaml  scene0016.yaml  scene0018.yaml  scene_sensed0001.yaml  scene_sensed0002.yaml  scene_sensed0003.yaml  scene_sensed0004.yaml  scene_sensed0005.yaml  scene_sensed0006.yaml  scene_sensed0007.yaml  scene_sensed0008.yaml  (+12 more)
examples/fetch/tall_pick/: config.yaml  path0002.yaml  path0003.yaml  path0004.yaml  path0006.yaml  path0010.yaml  path0011.yaml  path0012.yaml  path0016.yaml  path0018.yaml  path0020.yaml  request0001.yaml  request0002.yaml  request0003.yaml  request0004.yaml  (+41 more)
examples/omplapp/: Barriers.cfg  Twistycool.cfg  narrow_passage_kcar.cfg
examples/workcell/: abb_irb6640_185_280.srdf  depalletization.yaml  test.yaml  test_ompl.yaml
launch/: panda_benchmark.launch
mphpo/: __init__.py  base_worker.py  opt_worker.py  speed_worker.py  worker.py
scripts/: analysis.py  greedy_portfolio.py  hyperplan.py  hyperplan_cmdline.py  hyperplan_docker_entrypoint.sh  hyperplan_eval.py  hyperplan_pkl2csv.py  hyperplan_portfolio.py  hyperplan_vis.R  hyperplanvis.R  hyperplanvis.py  mphpo_cmdline.py
src/: robowflex_helper.cpp  robowflex_workcell_helper.cpp
src/hyperplan/: __init__.py  base_worker.py  moveit.py  omplapp.py  robowflex.py  robowflex_workcell.py  util.py
src/mphpo/: __init__.py  base_worker.py  moveit.py  omplapp.py  omplapp_workers.py  robowflex.py
(+451 files in other folders)
