<?xml version="1.0"?>
<package format="2">
  <name>mphpo</name>
  <version>0.0.1</version>
  <description>Motion planning hyperparameter optimization</description>
  <author email="mmoll@rice.edu">Mark Moll</author>
  <maintainer email="mmoll@rice.edu">Mark Moll</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/KavrakiLab/mphpo</url>
  <url type="bugtracker">https://github.com/KavrakiLab/mphpo/issues</url>
  <url type="repository">https://github.com/KavrakiLab/mphpo</url>
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>python-catkin-pkg</buildtool_depend>
  <build_depend>python</build_depend>
  <exec_depend>moveit_ros_benchmarks</exec_depend>
  <exec_depend>python</exec_depend>
</package>
